# Elyra

./: CMakeLists.txt  README.md
Elyra/: Application.cpp  Application.hpp  CMakeLists.txt  Elyra.hpp  ElyraAPI.hpp  Elyrapch.hpp  EntryPoint.cpp  Log.cpp  Log.hpp  Window.cpp  Window.hpp
Elyra/Assests/shaders/: FlatColor.glsl
Elyra/Assets/: CubeMesh.cpp  CubeMesh.hpp
Elyra/Assets/shaders/: Cube.frag  CubeShader.glsl  fragment.glsl  vertex.glsl
Elyra/Core/: Application.cpp  Application.hpp  Core.hpp  KeyCodes.hpp  Log.cpp  Log.hpp  TimeStep.hpp  Window.hpp
Elyra/ECS/: Component.hpp  Entity.hpp  Entity.inl  Registry.hpp  Registry.inl  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
Elyra/Events/: ApplicationEvent.hpp  Event.hpp  EventDispatcher.hpp  KeyEvent.hpp  MouseEvent.hpp
Elyra/ImGui/: ImGuiManager.cpp  ImGuiManager.hpp
Elyra/Input/: Input.cpp  Input.hpp  KeyCodes.hpp
Elyra/Layer/: Layer.hpp  LayerStack.cpp  LayerStack.hpp
Elyra/Platform/: WindowsWindow.cpp  WindowsWindow.hpp
Elyra/Renderer/: Buffer.cpp  Buffer.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  VertexArray.cpp  VertexArray.hpp
Elyra/Renderer/Camera/: OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PerspectiveCameraController.cpp  PerspectiveCameraController.hpp
Elyra/Renderer/Core/: Buffer.cpp  Buffer.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.hpp  VertexArray.cpp  VertexArray.hpp
Elyra/Renderer/Material/: Material.cpp  Material.hpp
Elyra/Renderer/Mesh/: Mesh.cpp  Mesh.hpp  OBJLoader.cpp  OBJLoader.hpp  Primitives.cpp  Primitives.hpp
Elyra/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
Elyra/Renderer/Shader/: Shader.cpp  Shader.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  UniformSet.cpp  UniformSet.hpp
Elyra/Renderer/Texture/: Texture.cpp  Texture.hpp
Elyra/Scene/: CameraSystem.cpp  CameraSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  Scene.cpp  Scene.hpp  Scene.inl  SceneManager.cpp  SceneManager.hpp  ScriptSystem.hpp
Elyra/Script/: ScriptableEntity.hpp
Elyra/UI/: UI.cpp  UI.hpp  UIManager.cpp  UIManager.hpp
Sandbox/: CMakeLists.txt  ECSDebugLayer.cpp  ECSDebugLayer.hpp  ECSrender.cpp  ECSrender.hpp  EntryPoint.cpp  ExampleLayer.hpp  SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.hpp  Scripts.hpp  sandbox.cpp
